# feast-criteo-mlops

./: .gitignore  README.md  feast_test.ipynb  preprocess.ipynb  pyproject.toml
feature_repo/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  features.py
ray/: README.md  rayCluster.yaml  ray_job.py
